
Tue Mar 14 20:23:53 CET 2000
(Saur)

Added patch from Masahiko Mori <masa@cthulhu.engr.sgi.com>
to improve localization support (I modified the patch somewhat).

-------------------------------------------------------------------------------

Tue Mar 14 22:23:27 GMT 2000
(gilbertt)

Patches from Bob Arendt <rdarendt@cwcom.net> to enable a user-configurable
cache-dir. Solves some preformance problems on NFS-mounted home directories.
Also fixes a couple of bugs with the current -econfdir option.

I've tested this fairly well, as has Bob, but let me know if there are any
problems.


-------------------------------------------------------------------------------

Thu Mar 16 23:02:49 GMT 2000
(gilbertt)

Patch from Marius Aamodt Eriksen <marius@linux.com>. Provides option to
include shaded windows in focuslist. Now all we need is an "include
iconified windows" option...


-------------------------------------------------------------------------------

Fri Mar 17 21:09:33 GMT 2000
(gilbertt)

Another patch from Marius Aamodt Eriksen <marius@linux.com>. Adds the
option to include iconified windows in the focuslist and uniconify them on
selection. Flim.

-------------------------------------------------------------------------------

Fri Mar 17 23:01:24 PST 2000
(KainX)

I found the problem in icccm.c.  For some reason, somebody thought it
would be a good idea to set minimum width/height equal to the base
width/height if no *maximum* size was specified.  I think they meant to
check for *minimum* size.  Anyway, I fixed that and added a more robust
check for that kind of thing.

-------------------------------------------------------------------------------

Sat Mar 18 18:24:29 CET 2000
(Christian)

Well, I'm committing the area wraparound stuff, since people
keep asking me for updated versons of the patch. I've moved
the config option to the areas dialog, where it fits better.
Feel free to revert if this is inappropriate.